<resources>
    <string name="app_name">ComputerStore</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="welcome">Welcome to the Computer Store!</string>
    <string name="welcome_description">On the next page you will be provided with instructions to use the app\n</string>
    <string name="ok">OK</string>
    <string name="instructions">Instructions</string>
    <string name="instructions_description">These are the instructions for how to use the app</string>
    <string name="button_add_item">Button add item</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="computer_name">Computer name</string>
    <string name="company">Company</string>
    <string name="year">Year</string>
    <string name="description">Description</string>
    <string name="computer_store">Computer Store</string>
</resources>